k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harmonic-mix-engine-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harmonic-mix-engine-frontend
  template:
    metadata:
      labels:
        app: harmonic-mix-engine-frontend
    spec:
      containers:
        - name: frontend
          image: conorsheppard/harmonic-mix-engine-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
