k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: harmonic-mix-engine
spec:
  selector:
    app: harmonic-mix-engine
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
